--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,5 @@ resolver = "2"
 members = [
 	"sources/chapters/01-getting_started/hello-raspberry",
 	"sources/chapters/02-gpios/led-control",
+	"sources/crates/crabwatch-libgpiod-sys",
 ]
